<resources>
    <string name="app_name">FunShop</string>

    <string name="all_error_generic">Ошибка</string>
    <string name="backend_error_field_empty">Поле не должно быть пустым</string>

    <string name="nav_store_front">Store Front</string>
    <string name="nav_backend">Backend</string>

    <string name="item_good_price">%s₽</string>
    <string name="item_good_price_postfix">₽</string>
    <string name="item_good_quantity">%d шт.</string>
    <string name="item_good_quantity_postfix">шт.</string>

    <string name="backend_message_item_updated_name">Название изменилось: %s</string>
    <string name="backend_message_item_updated_price">Цена изменилась: %s</string>
    <string name="backend_message_item_updated_quantity">Количество изменилось: %s</string>
    <string name="backend_action_discard">Оставить</string>
    <string name="backend_action_update_value">Обновить</string>

    <string name="backend_hint_name">Название</string>
    <string name="backend_hint_price">Цена</string>
    <string name="backend_hint_quantity">Количество</string>

    <string name="backend_action_cancel">Отменить</string>
    <string name="backend_action_save">Сохранить</string>

</resources>
