<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    >


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        style="@style/AppTheme.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/backend_hint_name"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/backendEditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.kondenko.funshop.utils.PayloadView
        android:id="@+id/payloadViewName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/backend_height_payloadview"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:text="@string/backend_message_item_updated_name"
        tools:visibility="visible"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPrice"
        style="@style/AppTheme.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/backend_hint_price"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/backendEditTextPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.kondenko.funshop.utils.PayloadView
        android:id="@+id/payloadViewPrice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/backend_height_payloadview"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:text="@string/backend_message_item_updated_price"
        tools:visibility="visible"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutQuantity"
        style="@style/AppTheme.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/backend_hint_quantity"
        tools:layout_editor_absoluteY="214dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/backendEditTextQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.kondenko.funshop.utils.PayloadView
        android:id="@+id/payloadViewQuantity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/backend_height_payloadview"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="306dp"
        android:visibility="gone"
        app:text="@string/backend_message_item_updated_quantity"
        tools:visibility="visible"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/backendButtonCancel"
            style="@style/AppTheme.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/backend_action_cancel"
            />

        <Button
            android:id="@+id/backendButtonSave"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="?colorAccent"
            android:text="@string/backend_action_save"
            />

    </LinearLayout>

</LinearLayout>